--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.7.3",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-svg": "13.4.0",
+    "react-spring": "^9.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
